Add more tasks for generics wildcards