@@ -1,5 +1,7 @@
 package com.javarush.task.task35.task3512;
 
+import java.lang.reflect.InvocationTargetException;
+
 public class Generator<T> {
     private final Class<T> clazz;
 
@@ -9,8 +11,9 @@ public class Generator<T> {
 
     T newInstance() {
         try {
-            return clazz.newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
+            return clazz.getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException |
+                 InvocationTargetException e) {
             throw new RuntimeException(e);
         }
     }
